# This file is part of mlnx-ofed. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/mlnx-ofed/master/COPYRIGHT. No part of mlnx-ofed, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of mlnx-ofed. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/mlnx-ofed/master/COPYRIGHT.


[package]
name = "mlnx-ofed-libibverbs-sys"
description = "Low-level FFI bindings to the C-library Mellanox OFED libibverbs"
keywords = ["Mellanox", "OFED", "InfiniBand", "libibverbs", "ibverbs"]
categories = ["external-ffi-bindings"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/mlnx-ofed"
repository = "https://github.com/lemonrock/mlnx-ofed.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile.conf.d/**/*"]
readme = "README.md"
publish = true
version = "0.0.3"
build = "src/build.rs"
links = "mlnx-ofed-libibverbs"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"